<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.cixlabs.pshellse.ShellActivity"
    tools:showIn="@layout/activity_shell"
    android:background="#1b17e6"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio"
        android:id="@+id/textView4"
        android:typeface="sans"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="38dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView6" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edu"
        android:id="@+id/textView5"
        android:typeface="sans"
        android:textStyle="bold"
        android:textColor="#ebdbdb"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:text="@string/edu2"
        android:textAlignment="center"
        android:textColor="#ebdbdb"
        android:textSize="20dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView7" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cargar"
        android:id="@+id/bt_cargar"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cargardemo"
        android:id="@+id/bt_cargardemo"
        android:layout_centerHorizontal="true"
        android:onClick="buttonCargarDemoOnClick" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Iniciar"
        android:id="@+id/bt_iniciar"
        android:onClick="buttonIniciarOnClick"
        android:layout_below="@+id/bt_cargar"
        android:layout_alignLeft="@+id/bt_cargar"
        android:layout_alignStart="@+id/bt_cargar" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:id="@+id/bt_salir"
        android:onClick="buttonSalirOnClick" />
</LinearLayout>
